--- a/totp.css
+++ b/totp.css
@@ -27,6 +27,7 @@ input[type="text"]
    padding: 0;
    background-color: transparent;
    outline: 0px none transparent;
+   border-radius: 0;
    }
 
 input[type="text"]:focus
@@ -39,4 +40,5 @@ input[type="text"]:focus
    padding: 0;
    background-color: #FFFFFF;
    outline: 0px none transparent;
+   border-radius: 0;
    }
